# COS3711-Exam-content

./: README.md
Design Patterns/: 1. Factory Method (Creational Pattern).md  2. Abstract Factory Method (Creational Pattern).md  3. Singleton (Creational Pattern).md  4. Memento (Behavioural Pattern).md  5. Strategy (Behavioural Pattern).md  6. Adapter-Wrapper (Structural Pattern).md  7. Facade (Structural Pattern).md
Past Papers/: COS3711 Jan-Feb Exam 2021 + Answers.md  COS3711 Jan-Feb Exam 2022 + Answers.md  COS3711 Jan-Feb Exam 2023 + Answers.md  COS3711 Jun-July Exam 2021 + Answers.md  COS3711 May-June Exam 2020 + Answers.md  COS3711 May-June Exam 2022 + Answers.md  COS3711 Oct-Nov Exam 2020 + Answers.md  COS3711 Oct-Nov Exam 2021 + Answers.md  COS3711 Oct-Nov Exam 2022 + Answers.md  JanFeb 2023 Paper and answers.md  JanFeb_exam paper code.docx
QThreads/: QThreads examples.md
Regular expressions/: Regular expression examples.md
Sockets/UDP/: UDP Socket examples.md
UML diagrams/: UML diagram examples.md
Universal/: CMakeLists.txt  main.cpp  metapropertyclass.cpp  metapropertyclass.h  regularexpressiontester.cpp  regularexpressiontester.h  signalreceiver.cpp  signalreceiver.h  signalsender.cpp  signalsender.h  threadworker.cpp  threadworker.h  xmlwriter.cpp  xmlwriter.h
XML/: XML examples.md
